tests/snapshots/assets__check_file@test.typ-120.snap
---
source: tests/assets.rs
expression: doc_120
input_file: tests/assets/test.typ
---
#link("http://example.com")[test]

