tests/snapshots/assets__check_file@test.typ-40.snap
---
source: tests/assets.rs
expression: doc_40
input_file: tests/assets/test.typ
---
#link("http://example.com")[test]

