tests/snapshots/assets__check_file@test.typ-80.snap
---
source: tests/assets.rs
expression: doc_80
input_file: tests/assets/test.typ
---
#link("http://example.com")[test]

